[project]
name = "telegram-knowledge-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.27",
    "pydantic>=2.11.5",
    "pydantic-ai-slim[duckduckgo]>=0.4.2",
    "pydantic-graph>=0.3.1",
    "pydantic-settings>=2.9.1",
]
